# myspellchecker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
.githooks/: README.md  pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  publish.yml
benchmarks/: README.md  ablation_report.py  audit_targeted_rules.py  benchmark_dev.yaml  benchmark_power.py  benchmark_test.yaml  clean_corpus.yaml  compare_runs.py  composite_sensitivity.py  create_dev_test_split.py  domain_mapping.yaml  formal_subset_benchmark.yaml  mlm_auroc.py  myspellchecker_benchmark.yaml  myspellchecker_benchmark_expanded.yaml  myspellchecker_benchmark_expanded_v2.yaml  profile_db_queries.py  reranker_importance.py  run_ablation.py  run_benchmark.py  run_component_ablation.py  semantic_model_eval.py  test_redundancy_audit.py
src/myspellchecker/: __init__.py  __main__.py  cli.py  cli_completions.py  cli_formatters.py  cli_parser.py  cli_utils.py
src/myspellchecker/algorithms/: __init__.py  _ngram_candidates.py  _ngram_scoring.py  _ngram_smoothing.py  byt5_candidate_generator.py  cache.py  dedup.py  factory.py  inference_backends.py  interfaces.py  joint_segment_tagger.py  medial_swap_strategy.py  morpheme_suggestion_strategy.py  neural_reranker.py  ngram_context_checker.py  pos_disambiguator.py  pos_inference.py  pos_tagger_base.py  pos_tagger_factory.py  pos_tagger_rule.py  pos_tagger_transformer.py  pos_tagger_viterbi.py  ranker.py  semantic_checker.py  suggestion_strategy.py  symspell.py  viterbi.py  viterbi.pyx
src/myspellchecker/commands/: __init__.py  build.py  check.py  completion.py  config_cmd.py  infer_pos.py  segment.py  train.py
src/myspellchecker/core/: __init__.py  builder.py  calibration.py  check_options.py  component_factory.py  context_validator.py  correction_utils.py  detection_registry.py  detection_rules.py  detector_data.py  error_suppression.py  exceptions.py  homophones.py  i18n.py  loan_word_variants.py  myanmar_confusables.py  parametric_templates.py  rerank_rules.py  response.py  response_builder.py  spellchecker.py  streaming.py  suggestion_pipeline.py  syllable_rules.py  syllable_rules_c.pxd  syllable_rules_c.pyx  token_refinement.py
src/myspellchecker/data_pipeline/: __init__.py  _segmenter_config.py  _segmenter_workers.py  batch_processor.pyx  config.py  database_packager.py  enrichment.py  frequency_builder.py  frequency_checkpoint.py  frequency_counter.pyx  frequency_io.py  frequency_pos.py  ingester.py  ingester_c.pyx  pipeline.py  pipeline_config_unified.py  pos_inference_manager.py  repair.py  repair_c.pyx  reporter.py  sample_corpus.py  schema_manager.py  segmenter.py  tsv_reader_c.pyx
src/myspellchecker/grammar/: __init__.py  config.py  engine.py  patterns.py
src/myspellchecker/providers/: __init__.py  _sqlite_bulk_ops.py  _sqlite_cache.py  _sqlite_enrichment.py  _sqlite_ner.py  _sqlite_pos_resolver.py  _sqlite_schema.py  base.py  connection_pool.py  csv_provider.py  json_provider.py  memory.py  sqlite.py
src/myspellchecker/rules/: README.md  ambiguous_words.yaml  aspects.yaml  calibration_data.json  calibration_data.yaml  classifiers.yaml  collocations.yaml  compound_confusion.yaml  compound_morphology.yaml  compounds.yaml  confusable_pairs.yaml  confusion_matrix.yaml  corruption_weights.yaml  detector_confidences.yaml  g2p_mappings.yaml  grammar_rules.yaml  homophone_confusion.yaml  homophones.yaml  loan_word_corrections.yaml  loan_words.yaml  loan_words_mined.yaml  medial_confusion.yaml  medial_swap_pairs.yaml  meta_classifier.json  meta_classifier.yaml  mined_confusable_pairs.yaml  morphology.yaml  morphotactics.yaml  named_entities.yaml  negation.yaml  orthographic_corrections.yaml  particle_contexts.yaml  particles.yaml  pos_inference.yaml  pronouns.yaml  register.yaml  rerank_rules.yaml  semantic_rules.yaml  (+5 more)
tests/: README.md  __init__.py  conftest.py  test_accuracy.py  test_algorithms_cache_factory.py  test_arbiter.py  test_aspect_system.py  test_base_provider_comprehensive.py  test_beam_pruning_edge_cases.py  test_benchmark_integrity.py  test_benchmark_yaml_hygiene.py  test_calibration.py  test_candidate_collection.py  test_check_options.py  test_classifier_system.py  test_cli_commands.py  test_cli_integration.py  test_colloquial_variants.py  test_compatible_ha.py  test_compound_merge_probe_strategy.py  test_compound_resolver.py  test_compound_system.py  test_confidence_fusion.py  test_config_loader.py  test_config_profiles.py  test_config_pydantic.py  test_conflict_rules.py  test_confusable_semantic_strategy.py  test_confusable_strategy.py  test_connection_pool.py  test_context_validator.py  test_context_validator_strategies.py  test_core_builder.py  test_core_di.py  test_corpus_preprocessor.py  test_correction_utils.py  test_cross_whitespace_probe_strategy.py  test_csv_provider.py  test_custom_segmenter.py  test_data_pipeline.py  (+174 more)
tests/benchmarks/: test_benchmark_tools.py
tests/e2e/: __init__.py  conftest.py  test_cli_e2e.py  test_library_usage.py  test_robustness.py
tests/fixtures/: config_templates.py  myanmar_test_samples.py
tests/integration/: __init__.py  conftest.py  test_async_integration.py  test_backward_compatibility.py  test_cli_config_overrides.py  test_cli_stdin_stdout.py  test_config_error_handling.py  test_config_loading.py  test_config_precedence.py  test_context_aware_integration.py  test_full_integration.py  test_joint_segment_tagger_integration.py  test_morphology_integration.py  test_ner_integration.py  test_particle_typo_integration.py  test_pos_integration.py  test_pos_tagger_integration.py  test_provider_integration.py  test_provider_symspell_ranker.py  test_segmenter_validator_pipeline.py  test_semantic_integration.py  test_validation_strategies_integration.py
tests/stress/: __init__.py  conftest.py  test_batch_processing.py  test_concurrency.py  test_symspell_compound.py
(+214 files in other folders)
